sohail-gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ecommerce-route

spec:
  parentRefs:
  - name: ecommerce-gateway

  rules:

  - matches:
    - path:
        type: PathPrefix
        value: /order

    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /

    backendRefs:
    - name: order-svc
      port: 80

  - matches:
    - path:
        type: PathPrefix
        value: /basket

    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /

    backendRefs:
    - name: basket-svc
      port: 80

  - matches:
    - path:
        type: PathPrefix
        value: /catalog

    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /

    backendRefs:
    - name: catalog-svc
      port: 80

  - matches:
    - path:
        type: PathPrefix
        value: /identity

    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /

    backendRefs:
    - name: identity-svc
      port: 80
